--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
     <html>
       <head>
-        <link rel="StyleSheet" type="text/css" href="MyDiary.css">
+        <link rel="StyleSheet" type="text/css" href="style.css">
       </head>
       <body class="main-body">
         <h3 class="header3">About this Site</h3>
@@ -30,7 +30,7 @@
   Sleep diary<br>
   Travel diary<br>
   Fictional diary<br>
-   click <a href="#"><b>here</b></a>to Sign Up for free.        
+   click <a href="signup.html"><b>here</b></a>to Sign Up for free.        
         </p>
       </body>
     </html>
